fix: error invalid csrf when delete a scenario

--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -1,42 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ parent() }} - Profil de  {{ app.user.pseudo }}{% endblock %}
+{% block title %}
+	{{ parent() }}
+	- Profil de
+	{{ app.user.pseudo }}
+{% endblock %}
 
 {% block body %}
-    <section>
-        <h1>Page de {{ app.user.pseudo }}</h1>
-    </section>
-    <section>
-        <h2>Mes scénarios</h2>
-        <table>
-            <thead>
-            <tr>
-                <th>Titre du scénario</th>
-                <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for scenario in scenario_list %}
-                <tr>
-                    <td>{{ scenario.title }}</td>
-                    <td>
-                        <a href="{{ path('scenario_update', {'id': scenario.id}) }}" class="button success-button">Modifier</a>
-                        <form action="{{ path('scenario_delete', {'id': scenario.id}) }}" method="post"
-                              class="delete-form" data-id="{{ scenario.id }}">
-                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ scenario.id) }}">
-                            <button type="button" class="button danger-button delete-button">Supprimer</button>
-                        </form>
-                    </td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-        <div id="popup-delete" class="hidden popup-delete">
-            <div class="confirm-dialog">
-                <p>Voulez-vous supprimer ce scénario ?</p>
-                <button id="confirm-yes" class="danger-button">Oui</button>
-                <button id="confirm-no" class="generic-button">Non</button>
-            </div>
-        </div>
-    </section>
+	<section>
+		<h1>Page de
+			{{ app.user.pseudo }}</h1>
+	</section>
+	<section>
+		<h2>Mes scénarios</h2>
+		<table>
+			<thead>
+				<tr>
+					<th>Titre du scénario</th>
+					<th>Actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for scenario in scenario_list %}
+					<tr>
+						<td>{{ scenario.title }}</td>
+						<td>
+							<a href="{{ path('scenario_update', {'id': scenario.id}) }}" class="button success-button">Modifier</a>
+							<form class="delete-form" action="{{ path('scenario_delete', {'id': scenario.id}) }}" method="post" onsubmit="return confirm('Voulez-vous supprimer ce scénario ?')">
+								<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ scenario.id) }}">
+								<button type="button" class="button danger-button delete-button">Supprimer</button>
+							</form>
+						</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		<div id="popup-delete" class="hidden popup-delete">
+			<div class="confirm-dialog">
+				<p>Voulez-vous supprimer ce scénario ?</p>
+				<button id="confirm-yes" class="danger-button">Oui</button>
+				<button id="confirm-no" class="generic-button">Non</button>
+			</div>
+		</div>
+	</section>
 {% endblock %}
